--- a/vue-chart/package.json
+++ b/vue-chart/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/chart.js": "^2.9.34",
     "chart.js": "^3.6.2",
     "core-js": "^3.6.5",
     "vue": "^2.6.11"
